[package]
name = "hydra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hydra"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
axum-server = "0.5.0"
clap = { version = "4.2.7", features = ["derive", "wrap_help"] }
kv = { version = "0.24.0", features = ["json-value", "bincode-value", "compression"] }
openraft = { version = "0.8.3", features = ["serde"] }
prost = "0.11.9"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.28.0", features = ["full"] }
toy-rpc = { version = "0.8.6", features = ["server", "client", "http_axum"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"

